--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ MILITARY_ZONE=PDSI1234567890!
 ## DB CONFIG DEVELOPMENT ###
 DB_DEV_HOST=127.0.0.1
 DB_DEV_USER=root
-DB_DEV_PASS=
+DB_DEV_PASS=root
 DB_DEV_NAME=monitoring_direct_charge
 #DB_DEV_HOST=
 #DB_DEV_USER=
