--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
+    "lodash": "^4.17.14",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "njwt": "^1.0.0",
@@ -20,7 +21,6 @@
   "version": "1.0.0",
   "description": "All ICT PDSI Apps configuration",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
