--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ TOKEN_EXPIRATION=1d
 MILITARY_ZONE=PDSI1234567890!
 
 ## DB CONFIG DEVELOPMENT ###
-DB_DEV_HOST=127.0.0.1
+DB_DEV_HOST=localhost
 DB_DEV_USER=root
-DB_DEV_PASS=root
+DB_DEV_PASS=
 DB_DEV_NAME=monitoring_direct_charge
 #DB_DEV_HOST=
 #DB_DEV_USER=
@@ -23,7 +23,7 @@ DB_DEV_NAME=monitoring_direct_charge
 #DB_DEV_NAME=
 
 ## DB CONFIG STAGING ###
-DB_STAG_HOST=127.0.0.1
+DB_STAG_HOST=localhost
 DB_STAG_USER=root
 DB_STAG_PASS=
 DB_STAG_NAME=monitoring_direct_charge
